# aoc2024

./: .gitignore  aoc2024.cabal
app/: Main.hs
src/: aocutils.hs  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs
